--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,7 +44,9 @@
 .nav-item i, .nav-item span {
     color: white !important;
 }
-
+.nav-item i, .nav-item span.text-black{
+    color: black !important;
+}
 .side {
     padding-left: 10px;
 }
@@ -53,4 +55,7 @@
     border-radius: 3em !important;
     padding-top: .75em !important;
     padding-bottom: .75em !important;
+}
+.bg-gradient-primary{
+    background: #202020 !important;
 }
