--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -59,3 +59,7 @@
 .bg-gradient-primary{
     background: #202020 !important;
 }
+.btn-add{
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+}
