--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,9 +44,11 @@
 .nav-item i, .nav-item span {
     color: white !important;
 }
-.nav-item span.text-black{
+
+.nav-item span.text-black {
     color: black !important;
 }
+
 .side {
     padding-left: 10px;
 }
@@ -56,10 +58,21 @@
     padding-top: .75em !important;
     padding-bottom: .75em !important;
 }
-.bg-gradient-primary{
+
+.bg-gradient-primary {
     background: #202020 !important;
 }
-.btn-add{
+
+.btn-add {
     padding-top: 5px !important;
     padding-bottom: 5px !important;
+}
+#navbar {
+    box-shadow: none !important;
+}
+.limitText{
+    width: 250px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
